# search-engine

./: README.md  app.py  config.py  pyproject.toml  setup.py
search_engine/: page.py  search_engine.py  search_matrix.py  util.py  web_crawler.py
templates/: index.html
