[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["Eryk Olejarz <olejarzeryk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.13"
aiosignal = "1.3.2"
attrs = "25.3.0"
beautifulsoup4 = "4.13.3"
blinker = "1.9.0"
bs4 = "0.0.2"
click = "8.1.8"
flask = "3.1.0"
frozenlist = "1.5.0"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
joblib = "1.4.2"
markupsafe = "3.0.2"
multidict = "6.1.0"
nltk = "3.9.1"
numpy = "2.2.4"
ordered-set = "4.1.0"
propcache = "0.3.0"
regex = "2024.11.6"
scikit-learn = "1.6.1"
scipy = "1.15.2"
soupsieve = "2.6"
threadpoolctl = "3.6.0"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
werkzeug = "3.1.3"
yarl = "1.18.3"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
